2007-11-30  Alex Roitman  <shura@gramps-project.org>
	* data/grampsxml.dtd: Add region to objref.
	* data/grampsxml.rng: Add region to objref.

2007-11-30 Benny Malengier <benny.malengier@gramps-project.org>
	* src/GrampsCfg.py: rel media path entry box
	* src/gen/db/base.py: methods for access
	* src/gen/db/dbdir.py: storage in BSDDB
	* src/GrampsDb/_GrampsDbWriteXML.py: write in header
	* src/GrampsDbUtils/_ReadXML.py: read relative path
	Start of adding relative media path to database

2007-11-29  Dougas S. Blank  <dblank@cs.brynmawr.edu>
	* src/Editors/_EditFamily.py: reverse surname guess for father

2007-11-29  Douglas S.Blank  <dblank@cs.brynmawr.edu>
	* src/ReportBase/__init__.py: import MenuReportOptions
	* src/ReportBase/_ReportOptions.py: import MenuOptions and
	  define MenuReportOptions
	* src/plugins/Calendar.py: get MenuReportOptions from ReportOptions
	* src/plugins/DescendChart.py: ditto
	* src/plugins/AncestorChart.py: ditto
	* src/plugins/GVHourGlass.py: ditto
	* src/plugins/FanChart.py: ditto
	* src/PluginUtils/__init__.py: define MenuToolOptions
	* src/PluginUtils/_MenuOptions.py: Remove circular dependancies

2007-11-29 Benny Malengier <benny.malengier@gramps-project.org>
	* src/DataViews/_RepositoryView.py:
	* src/gen/db/base.py:
	* src/DisplayModels/_RepositoryModel.py:
	Added a change column in repoview, model, database column storage

2007-11-29  Douglas S.Blank  <dblank@cs.brynmawr.edu>
	* po//POTFILES.in: renamed PluginStatus.py -> PluginWindows.py

2007-11-29  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/plugins/ImportCSV.py: add progress meter

2007-11-29  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/ViewManager.py: use PluginsWindows
	* src/PluginUtils/_PluginStatus.py: moved from
	* src/PluginUtils/_PluginWindows.py: moved to
	* src/PluginUtils/__init__.py: use PluginsWindows
	* src/PluginUtils/_Plugins.py: use PluginsWindows

2007-11-28  Douglas S. Blank  <dblank@cs.brynmawr.edu>